--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,119 @@
 body{
 	margin:0px;
 	padding:0px;
+	background-color: #89C1DB;
 }
 
 #header_wrapper{
 	width:100%;
 	height:100px;
 	background-color: #0A0B0C;
+	box-shadow: 0px 0px 5px #000;
 }
 
 #header{
-	width:960px;
+	min-width: 600px;
+	width:60%;
 	height:100px;
 	margin-left:auto;
 	margin-right:auto;
+}
+
+#header img{
+	height:100px;
+	float:left;
+	display: block;
+}
+
+#judul{
+	min-width: 400px;
+	font-family: arial;
+	float:left;
+	clear:right;
+	padding-top: 20px;
+}
+
+#judul_besar{
+	font-family: arial;
+	font-size: 30px;
+	color: #fff;
+	line-height: 30px;
+	margin-left: 30px;
+	float:left;
+	clear:right;
+}
+
+#judul_kecil{
+	font-family: arial;
+	font-size: 15px;
+	color: #fff;
+	line-height: 30px;
+	margin-left: 30px;
+	float:left;
+	width:300px;
+	clear: left;
+}
+
+#content{
+	width:60%;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+#nim{
+	min-width: 400px;
+	width:60%;
+	height:40px;
+	margin-left: 20%;
+	text-align: center;
+}
+
+#cari{
+	min-width: 100px;
+	width:28%;
+	clear: left;
+	margin-left: 36%;
+	margin-top: 10px;
+	height: 50px;
+	font-weight: bold;
+	font-size: 30px;
+}
+
+label{
+	display: block;
+	margin-top: 25%;
+	text-align: center;
+	margin-bottom: 10px;
+	font-size: 30px;
+	transition:margin-top 300ms;
+	-webkit-transition:margin-top 300ms;
+	-moz-transition:margin-top 300ms;
+	-o-transition:margin-top 300ms;
+	-ms-transition:margin-top 300ms;
+}
+
+#pesan_merah{
+	width:80%;
+	margin-left: auto;
+	margin-right: auto;
+	min-width: 400px;
+	background-color: #ff6666;
+	padding: 20px;
+	text-align: center;
+	margin-top: 30px;
+	border-radius: 10px;
+	box-shadow: 0px 10px 8px -10px #555;
+}
+
+#pesan_hijau{
+	width:80%;
+	margin-left: auto;
+	margin-right: auto;
+	min-width: 400px;
+	background-color: #77dd44;
+	padding: 20px;
+	text-align: center;
+	margin-top: 30px;
+	border-radius: 10px;
+	box-shadow: 0px 10px 8px -10px #555;	
 }
